--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: MPV
 Title: Data Sets from Montgomery, Peck and Vining's Book
-Version: 1.1-1
+Version: 1.2
 Author: W.J. Braun
 Description: These data sets are taken from the book Introduction
              to Linear Regression Analysis (3rd ed), by the above authors.
